--- a/grape.css
+++ b/grape.css
@@ -1,13 +1,16 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
 }
+
 .gjs-grid-column {
   flex: 1 1 0%;
-  padding: 5px 0;
+  /* padding: 5px 0; */
 }
+
 .gjs-grid-row {
   display: flex;
   justify-content: flex-start;
@@ -16,17 +19,21 @@ body {
   min-height: auto;
   padding: 10px 0;
 }
+
 .gjs-heading {
   margin: 0;
 }
+
 .gjs-heading {
   margin: 0;
   color: rgba(29, 40, 55, 1);
 }
+
 .gjs-grid-column {
   flex: 1 1 0%;
   padding: 5px 0;
 }
+
 .gjs-grid-row {
   display: flex;
   justify-content: flex-start;
@@ -35,60 +42,12 @@ body {
   min-height: auto;
   padding: 10px 0;
 }
-.gjs-grid-column.feature-item {
-  padding-top: 15px;
-  padding-right: 15px;
-  padding-bottom: 15px;
-  padding-left: 15px;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  min-width: 30%;
-}
-.gjs-grid-column.testimonial-item {
-  padding-top: 15px;
-  padding-right: 15px;
-  padding-bottom: 15px;
-  padding-left: 15px;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  min-width: 45%;
-  background-color: rgba(247, 247, 247, 0.23);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  align-items: flex-start;
-  border-top-width: 1px;
-  border-right-width: 1px;
-  border-bottom-width: 1px;
-  border-left-width: 1px;
-  border-top-style: solid;
-  border-right-style: solid;
-  border-bottom-style: solid;
-  border-left-style: solid;
-  border-top-color: rgba(0, 0, 0, 0.06);
-  border-right-color: rgba(0, 0, 0, 0.06);
-  border-bottom-color: rgba(0, 0, 0, 0.06);
-  border-left-color: rgba(0, 0, 0, 0.06);
-}
+
 .gjs-link:hover {
   color: rgb(36, 99, 235);
   text-decoration: underline;
 }
-.gjs-icon.gjs-feature-icon {
-  padding-top: 10px;
-  padding-right: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  background-color: rgb(36, 99, 235);
-  color: white;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
+
 #irndyb {
   background-color: rgba(0, 0, 0, 1);
   background-clip: border-box;
@@ -99,15 +58,18 @@ body {
   font-family: Helvetica, sans-serif;
   color: white;
 }
+
 .gjs-container {
   width: 90%;
   margin: 0 auto;
   max-width: 1200px;
 }
+
 .gjs-section {
   display: flex;
   padding: 50px 0;
 }
+
 #igbjpg {
   justify-content: center;
   align-items: center;
@@ -123,6 +85,7 @@ body {
   max-height: 395px;
   height: auto;
 }
+
 #iokscs {
   font-family: "Anton", sans-serif;
   text-align: center;
@@ -134,6 +97,7 @@ body {
   color: rgba(255, 255, 255, 1);
   text-transform: uppercase;
 }
+
 #ihm4u {
   transition: opacity 2s ease-in 1s;
   justify-content: center;
@@ -144,6 +108,7 @@ body {
   flex-wrap: wrap;
   align-content: center;
 }
+
 #ifs9z {
   background-color: rgba(2, 7, 12, 1);
   padding-top: 106px;
@@ -151,23 +116,21 @@ body {
   padding-bottom: 26px;
   padding-left: 0px;
 }
-#i7s0t {
-  padding: 10px;
+
+#footer-text {
   font-family: Helvetica, sans-serif;
   color: grey;
   text-align: center;
   font-size: 8px;
 }
+
 #itgwf {
   flex-direction: row;
   justify-content: center;
   display: flex;
-  padding-top: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  padding-left: 0px;
   color: white;
 }
+
 .gjs-icon {
   display: inline-block;
   text-decoration: none;
@@ -177,30 +140,26 @@ body {
   width: 50px;
   height: 50px;
 }
-#isfqo {
-  width: 33px;
-  height: 33px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-}
+
 #il6mv {
   flex: 0 1 auto;
   display: block;
+  text-align: center;
 }
-#i57pm5 {
-  width: 33px;
-  height: 33px;
+
+#icon {
+  width: 40px;
   margin-top: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
   margin-left: 10px;
   padding-top: 5px;
 }
-.icon {
+
+.icon-link {
   color: white;
 }
+
 #iokscs:hover {
   font-family: "Anton", sans-serif;
   text-align: center;
@@ -210,6 +169,7 @@ body {
   flex-wrap: wrap;
   align-content: center;
 }
+
 .gjs-link {
   vertical-align: top;
   max-width: 100%;
@@ -217,9 +177,8 @@ body {
   text-decoration: none;
   color: inherit;
 }
+
 #ih4tpq {
-  background-image: url("https://camo.githubusercontent.com/56a4b17e7621723ebfc4631796b5a6f591721aadcc13776adfee0a712db0f30d/68747470733a2f2f692e696d6775722e636f6d2f705250494478562e706e67");
-  background-position: -70px -210px;
   background-size: 560px 560px;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -233,9 +192,11 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 #i9efps {
   display: flex;
 }
+
 #ikc3uj {
   color: black;
   padding-top: 5px;
@@ -244,6 +205,7 @@ body {
   padding-left: 3px;
   display: flex;
 }
+
 #i24hq1 {
   color: #1c8eff;
   display: inline-block;
@@ -257,50 +219,7 @@ body {
 }
 
 /* CSS */
-.button-29 {
-  align-items: center;
-  appearance: none;
-  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
-  border: 0;
-  border-radius: 6px;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, rgba(58, 65, 111, 0.5) 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: "JetBrains Mono", monospace;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow 0.15s, transform 0.15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow, transform;
-  font-size: 18px;
-}
 
-.button-29:focus {
-  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-}
-
-.button-29:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-29:active {
-  box-shadow: #3c4fe0 0 3px 7px inset;
-  transform: translateY(2px);
-}
 #ib3lsd {
   padding-top: 5px;
   padding-right: 10px;
@@ -311,11 +230,13 @@ body {
   align-self: center;
   flex-direction: column;
 }
+
 #ix7gtx {
   min-width: 320px;
   min-height: 120px;
   max-width: 425px;
 }
+
 #ipigjg {
   background-clip: content-box;
   background-color: rgba(255, 255, 255, 1);
@@ -332,160 +253,14 @@ body {
   max-width: 425px;
   width: 425px;
 }
-#isfqo:hover {
-  opacity: 50%;
-  cursor: pointer;
-}
-#i57pm5:hover {
+
+#icon:hover {
   cursor: pointer;
   opacity: 50%;
 }
+
 #iex6pg:hover {
   text-decoration: none;
-}
-#irwrq {
-  background-image: url("/images/rp120.jpg");
-  background-position: -100px -310px;
-  background-size: 560px 560px;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-origin: padding-box;
-  min-width: 320px;
-  box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0);
-  max-height: 182px;
-  min-height: 130px;
-  max-width: 425px;
-  height: 150px;
-  justify-content: center;
-  align-items: center;
-}
-#i9k2v {
-  display: flex;
-}
-#iv14v {
-  color: black;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 3px;
-  display: flex;
-}
-#ii92j:hover {
-  text-decoration: none;
-}
-#imu76 {
-  color: #1c8eff;
-  display: inline-block;
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-weight: 700;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-}
-#ixbsk {
-  padding-top: 5px;
-  padding-right: 10px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  display: flex;
-  flex: 1 1 0%;
-  align-self: center;
-  flex-direction: column;
-}
-#it875 {
-  min-width: 320px;
-  min-height: 120px;
-  max-width: 425px;
-}
-#iqall {
-  background-clip: content-box;
-  background-color: rgba(255, 255, 255, 1);
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  flex: 0 1 auto;
-  min-width: 320px;
-  max-width: 425px;
-  width: 425px;
-}
-#icni9 {
-  background-image: url("/images/homelab.jpg");
-  background-position: -90px -210px;
-  background-size: 560px 560px;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-origin: padding-box;
-  min-width: 320px;
-  box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0);
-  max-height: 182px;
-  min-height: 130px;
-  max-width: 425px;
-  height: 150px;
-  justify-content: center;
-  align-items: center;
-}
-#iswhv {
-  display: flex;
-}
-#ihd1w {
-  color: black;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 3px;
-  display: flex;
-}
-#ixw7l:hover {
-  text-decoration: none;
-}
-#iyshk {
-  color: #1c8eff;
-  display: inline-block;
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-weight: 700;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-}
-#irvbl {
-  padding-top: 5px;
-  padding-right: 10px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  display: flex;
-  flex: 1 1 0%;
-  align-self: center;
-  flex-direction: column;
-}
-#i9e5j {
-  min-width: 320px;
-  min-height: 120px;
-  max-width: 425px;
-}
-#iwrct {
-  background-clip: content-box;
-  background-color: rgba(255, 255, 255, 1);
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  flex: 0 1 auto;
-  min-width: 320px;
-  max-width: 425px;
-  width: 425px;
 }
 
 #iomic {
@@ -496,17 +271,21 @@ body {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
 }
+
 @media (max-width: 992px) {
   .gjs-grid-row {
     flex-direction: column;
   }
+
   .gjs-grid-row {
     flex-direction: column;
   }
+
   #ib3lsd {
     min-width: 320px;
     max-width: 425px;
@@ -514,87 +293,40 @@ body {
     align-self: auto;
     flex: 0 1 auto;
   }
+
   #ix7gtx {
     width: auto;
   }
+
   #igbjpg {
     display: flex;
     height: auto;
   }
-  #ixbsk {
-    min-width: 320px;
-    max-width: 425px;
-    width: auto;
-    align-self: auto;
-    flex: 0 1 auto;
-  }
-  #it875 {
-    width: auto;
-  }
-  #irvbl {
-    min-width: 320px;
-    max-width: 425px;
-    width: auto;
-    align-self: auto;
-    flex: 0 1 auto;
-  }
-  #i9e5j {
-    width: auto;
-  }
 }
+
 @media (max-width: 480px) {
   #ipigjg {
     min-width: 220px;
     width: auto;
   }
+
   #ih4tpq {
     min-width: 220px;
     width: auto;
   }
+
   #ix7gtx {
     width: auto;
     min-height: 120px;
     min-width: 300px;
   }
+
   #ib3lsd {
     align-self: auto;
     min-width: 220px;
   }
+
   #iokscs {
     font-size: 27px;
-  }
-  #irwrq {
-    min-width: 220px;
-    width: auto;
-  }
-  #ixbsk {
-    align-self: auto;
-    min-width: 220px;
-  }
-  #it875 {
-    width: auto;
-    min-height: 120px;
-    min-width: 300px;
-  }
-  #iqall {
-    min-width: 220px;
-    width: auto;
-  }
-  #icni9 {
-    min-width: 220px;
-    width: auto;
-  }
-  #irvbl {
-    align-self: auto;
-    min-width: 220px;
-  }
-  #i9e5j {
-    width: auto;
-    min-height: 120px;
-    min-width: 300px;
-  }
-  #iwrct {
-    min-width: 220px;
-    width: auto;
   }
 }
